--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.6
 commonmark==0.9.1
 decorator==5.1.1
 entrypoints==0.4
+folium == 0.14.0
 gitdb==4.0.10
 idna==3.4
 importlib-metadata==5.2.0
@@ -37,6 +38,7 @@ semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 streamlit==1.16.0
+streamlit-folium == 0.11.1
 tenacity==8.1.0
 toml==0.10.2
 toolz==0.12.0
