--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.2
 jsonschema==4.17.3
 MarkupSafe==2.1.1
 matplotlib == 3.7.1
+networkx == 3.1
 numpy==1.24.0
 packaging==22.0
 pandas==1.5.2
